--- a/testkit.html
+++ b/testkit.html
@@ -50,7 +50,7 @@
         </nav>
         <div>
       <h2>
-        WELCOME<br>kindly fill the form below to get an instant test report
+        Self-Assessment Test and Triage<br>kindly fill the form below to get an instant test report
     </h2>
 </div>
     </section>
