--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <div class="container-fluid" style="background-color:#111d5E;">
 
       <h3 class="bottom-text">Find out ways you<div>
-          can help flatten the curve today<br>We are here to help ensure that you beat the odds!!</div></h3>
+          can help flatten the curve today<br><em>We are here to help ensure that you beat the odds!!</em><p></p></div></h3>
       <button type="button" id="fl" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>Download</button>
       <button type="button" id="f2" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>Download</button>
     </div>
