--- a/index.html
+++ b/index.html
@@ -116,18 +116,18 @@
         <div class="carousel-item active">
           <h2>Get self analysis .</h2>
           <img class="testimonial-image" src="1.jpg" alt="dog-profile">
-          <em>Dr gbeminiyi</em>
+          <em>Dr Gbeminiyi</em>
 
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text"> Instant Help.</h2>
           <img class="testimonial-image" src="2.jpg" alt="lady-profile">
-          <em>Dr oluwabisi</em>
+          <em>Dr Oluwabisi</em>
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text"> Qualified personnels.</h2>
           <img class="testimonial-image" src="3.jpg" alt="lady-profile">
-          <em>Dr oluwaseun</em>
+          <em>Dr Oluwaseun</em>
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text"> Made specifically to help you.</h2>
