--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item ">
-              <a class="nav-link " id="tobi" href="#features">About app</a>
+              <a class="nav-link " id="tobi" href="#features">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="features.html">Features</a>
